<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".java.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btnToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_login"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/btnToSimpleRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/to_simple_recyclerview"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/btnToCustomRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/to_custom_recyclerview"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>